<resources>
    <string name="app_name">JobApp</string>
    <string name="title_home">Home</string>
    <string name="title_settings">Settings</string>
    <string name="title_job">Job</string>
    <string name="msg_loading_error">Error fetching data. Please try to reload or check your internet connection.</string>

    <string name="settings">Settings</string>
    <string name="more_details">More details..</string>
    <string name="apply">Apply now</string>
    <string name="labelEmail">Email:</string>
    <string name="labelName">Full Name:</string>
    <string name="send_application">Submit Application</string>
    <string name="upload_cv_file">Upload cv file</string>
    <string name="select_cv">Select PDF file</string>
    <string name="permission_msg">Please allow external storage reading permission</string>
    <string name="send_email">Send mail...</string>
    <string name="no_email_installed">There is no email client installed.</string>
    <string name="msg_error">Missing values</string>

</resources>
